# action-release-notifier

./: Cargo.toml  Dockerfile  README.md  action.yml
.github/workflows/: build.yaml  codecov.yaml  docker.yaml  lint.yaml
src/: gh.rs  lib.rs  main.rs  util.rs
