[package]
name = "release_notifier"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = { version = "0.10.32", features = ["vendored"] }
futures = "0.3.0"
serde = { version = "1", features = ["derive"] }
serde_json="1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
regex = "1"
anyhow = "1.0.44"
chrono = "0.4"