[package]
name = "release_notifier"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json="1.0"
tokio = { version = "1.18.2", features = ["rt-multi-thread","macros"] }
reqwest = { version = "0.11.10", features = ["json"] }
regex = "1.5.5"
anyhow = "1.0.44"
chrono = "0.4"
feed-rs = "1.0"
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
html2md = "0.2.13"
